--- a/05 Implementation/AndroidProject/app/src/main/res/layout/activity_main.xml
+++ b/05 Implementation/AndroidProject/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.android.MainActivity"
-    android:background="@color/colorBackground">
+    android:padding="16dp">
 
     <TextView
         android:layout_width="wrap_content"
