--- a/05 Implementation/AndroidProject/app/src/main/res/layout/activity_main.xml
+++ b/05 Implementation/AndroidProject/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<ScrollView android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.android.MainActivity"
-    android:padding="16dp"
-    android:id="@+id/main_activity">
+    xmlns:android="http://schemas.android.com/apk/res/android">
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".view.android.MainActivity"
+            android:padding="16dp"
+            android:id="@+id/main_activity"
+            android:orientation="vertical">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add row"
+                android:onClick="addRowClicked"/>
 
 
 
+        </LinearLayout>
 
-</FrameLayout>
+</ScrollView>
