--- a/05 Implementation/AndroidProject/app/src/main/res/layout/activity_main.xml
+++ b/05 Implementation/AndroidProject/app/src/main/res/layout/activity_main.xml
@@ -1,41 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <ScrollView xmlns:tools="http://schemas.android.com/tools"
+
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    tools:context=".view.MainActivity"
+    android:id="@+id/main_layout">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
+    <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="2dp">
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context=".view.android.MainActivity"
-            android:padding="16dp"
-            android:id="@+id/main_activity"
-            android:orientation="vertical">
-
-
-        </LinearLayout>
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="16dp"
-            app:srcCompat="@drawable/ic_add"
-            android:onClick="addRowClicked"
-            tools:ignore="VectorDrawableCompat" />
+            android:orientation="vertical">
 
-    </LinearLayout>
+            <TableLayout
+                android:id="@+id/tableLayout_header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
+            <!--<ScrollView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content">-->
 
+            <!--<TableLayout-->
+            <!--android:id="@+id/tableLayout_data"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content" />-->
+            <!--</ScrollView>-->
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView_tasks"
+                android:scrollbars="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                 />
 
-</ScrollView>
+        </LinearLayout>
+    </HorizontalScrollView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:clickable="true"
+        android:focusable="true"
+        android:onClick="addRow"
+        android:src="@mipmap/ic_add"
+        app:backgroundTint="@color/colorPrimary" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|start"
+        android:clickable="true"
+        android:focusable="true"
+        android:onClick="addRows"
+        android:src="@mipmap/ic_add"
+        app:backgroundTint="@color/colorPrimary" />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
