--- a/05 Implementation/AndroidProject/app/src/main/res/values/colors.xml
+++ b/05 Implementation/AndroidProject/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#019AE8</color>
-    <color name="colorPrimaryDark">#0076BF</color>
-    <color name="colorAccent">#0076BF</color>
+    <color name="colorPrimary">#0A52A0</color>
+    <color name="colorPrimaryDark">#0E3B79</color>
+    <color name="colorAccent">#D81B60</color>
+
+    <color name="black">#000000</color>
+    <color name="transparent">#00FFFFFF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="lightGray">#CCCCCC</color>
+    <color name="darkGray">#888888</color>
+
 </resources>
