--- a/05 Implementation/AndroidProject/app/src/main/res/layout/row_layout.xml
+++ b/05 Implementation/AndroidProject/app/src/main/res/layout/row_layout.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:focusable="true"
     android:focusableInTouchMode="true"
+    android:focusedByDefault="true"
     android:orientation="horizontal">
 
     <!--<TextView-->
