--- a/05 Implementation/AndroidProject/app/src/main/res/menu/menu.xml
+++ b/05 Implementation/AndroidProject/app/src/main/res/menu/menu.xml
@@ -4,7 +4,14 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
 <item
     android:id="@+id/indstillinger"
     android:orderInCategory="1"
-    app:showAsAction="ifRoom"
+    app:showAsAction="never"
     android:title="@string/indstillinger"/>
+
+    <item android:id="@+id/menu_item_share"
+        android:title="@string/share"
+        app:showAsAction="ifRoom"
+        android:onClick="onShareClick"/>
+
+
 
 </menu>
